--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "app.js",
     "dependencies": {
         "mongoose": "^5.8.1",
+        "node-cron": "^2.0.3",
         "npm": "^6.4.1",
         "snoowrap": "^1.15.2",
         "telegraf": "^3.34.1"
@@ -13,6 +14,7 @@
         "dotenv": "^6.2.0"
     },
     "scripts": {
+        "start": "node app.js",
         "test": "nodemon app.js"
     },
     "repository": {
