--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
     "name": "awpbot",
-    "version": "1.0.0",
-    "description": "A Telegram bot to Scrap reddit for Awesome Wallpapers and post it on Telegram Channel",
-    "main": "app.js",
-    "dependencies": {
-        "mongoose": "^5.8.1",
-        "node-cron": "^2.0.3",
-        "npm": "^6.4.1",
-        "snoowrap": "^1.15.2",
-        "telegraf": "^3.34.1"
-    },
-    "devDependencies": {
-        "dotenv": "^6.2.0"
-    },
+    "version": "0.0.0",
+    "private": true,
     "scripts": {
-        "start": "node app.js",
-        "test": "nodemon app.js"
+        "start": "node ./bin/www",
+        "test": "nodemon ./bin/www"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/neelgeek/AWPbot.git"
-    },
-    "author": "Neel Bhave",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/neelgeek/AWPbot/issues"
-    },
-    "homepage": "https://github.com/neelgeek/AWPbot#readme"
+    "dependencies": {
+        "body-parser": "~1.18.2",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.6.9",
+        "dotenv": "^8.2.0",
+        "ejs": "~2.5.7",
+        "express": "~4.15.5",
+        "moment": "^2.24.0",
+        "mongoose": "^5.8.3",
+        "morgan": "~1.9.0",
+        "node-cron": "^2.0.3",
+        "serve-favicon": "~2.4.5",
+        "snoowrap": "^1.20.1",
+        "telegraf": "^3.34.1"
+    }
 }
