--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www",
+        "start": "NODE_ENV=prod node ./bin/www",
         "test": "nodemon ./bin/www"
     },
     "dependencies": {
